poke/testsuite/poke.pkl/printf-diag-11.pk
/* { dg-do compile } */

/* Invalid base.  */

printf "xxx%i32Xxxx", 10L; /* { dg-error "" } */
